--- a/package.json
+++ b/package.json
@@ -6,29 +6,31 @@
   "scripts": {
     "dev": "concurrently \"vite\" \"node server/index.js\"",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server/index.js"
   },
   "dependencies": {
-    "vue": "^3.4.38",
+    "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "axios": "^1.6.7",
     "@vueuse/core": "^10.7.2",
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "fluent-ffmpeg": "^2.1.2",
-    "multer": "1.4.5-lts.1"
+    "multer": "1.4.5-lts.1",
+    "artplayer": "^5.1.1",
+    "vuetify": "^3.5.4",
+    "@mdi/font": "^7.4.47"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
     "@types/fluent-ffmpeg": "^2.1.24",
-    "@vitejs/plugin-vue": "^5.1.3",
-    "typescript": "^5.5.3",
-    "vite": "^5.4.2",
-    "vue-tsc": "^2.1.4",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.35",
-    "autoprefixer": "^10.4.17",
+    "@vitejs/plugin-vue": "^4.3.4",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.9",
+    "vue-tsc": "^1.8.11",
+    "sass": "^1.71.1",
     "concurrently": "^8.2.2"
   }
 }
